--- a/frontend/src/styles/Login.module.css
+++ b/frontend/src/styles/Login.module.css
@@ -44,3 +44,37 @@
     background: white;
     color: black;
 }
+
+.loginBtn {
+    width: 300px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 3px;
+    font-size: 20px;
+    font-family: 'Montserrat';
+    animation: opacity .7s ease alternate;
+    border-radius: 10px;
+}
+
+.li {
+    animation: opacity 1s ease alternate;
+}
+
+.loginBtnImg {
+    width: 34px;
+    height: 34px;
+}
+
+@keyframes opacity {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+    }
+}
