--- a/frontend/src/styles/Contacts.module.css
+++ b/frontend/src/styles/Contacts.module.css
@@ -8,6 +8,7 @@ title {
   justify-content: center;
   align-items: center;
   padding: 10px;
+  row-gap: 10px;
 }
 
 .form {
@@ -62,20 +63,25 @@ title {
 
 .contactItem {
   display: flex;
-  flex-direction: column;
-  row-gap: 10px;
+  justify-content: space-between;
+  align-items: center;
   background: #9b682a;
-  background: linear-gradient(
-    90deg,
-    rgba(155, 104, 42, 1) 0%,
-    rgba(196, 43, 43, 1) 51%,
-    rgba(217, 198, 26, 1) 100%
-  );
   width: 700px;
   padding: 15px;
   border-radius: 20px;
-  height: 160px;
+  height: 200px;
 }
+
+.BtnEdit {
+        width: 200px;
+    height: 50px;
+    font-size: 23px;
+    font-family: 'Montserrat';
+    font-weight: 600;
+    color: white;
+    border-radius: 15px;
+    border: none;
+} 
 
 .contactTitle {
     font-family: 'Montserrat';
@@ -112,4 +118,15 @@ title {
     font-weight: 600;
     color: white;
     border-radius: 15px;
+}
+
+.btnSelect {
+      width: 200px;
+    height: 50px;
+    font-size: 23px;
+    font-family: 'Montserrat';
+    font-weight: 600;
+    color: white;
+    border-radius: 15px;
+    border: none;
 }
