--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -27,6 +27,12 @@
   align-items: center;
 }
 
+.loginNav.openNav {
+  flex-direction: column;
+  align-items: flex-start;
+  row-gap: 20px;
+}
+
 .burgerBtn {
   background: transparent;
   border: none;
@@ -39,8 +45,8 @@
   top: 0;
   left: 0;
 
-  width: 80%;
-  max-width: 320px;
+  width: 100%;
+  max-width: 100vw;
   height: 100vh;
 
   background: white;
@@ -168,6 +174,12 @@
   }
   .NewsItemImg {
     max-width: 960px;
+  }
+  .burgerBtn {
+    display: none;
+  }
+  .mobileBurger {
+    display: none;
   }
 }
 
