--- a/frontend/src/styles/Login.module.css
+++ b/frontend/src/styles/Login.module.css
@@ -1,80 +1,196 @@
 .title {
-    font-family: 'Montserrat';
+  font-family: 'Montserrat';
 }
 
-.Login{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
+.Login {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 10px;
 }
 
 .form {
-    display: flex;
-    flex-direction: column;
-    width: 500px;
-    height: 230px;
-    border-radius: 30px;
-    padding: 20px;
-    border: 1px solid black;
-    row-gap: 12px;
+  display: flex;
+  flex-direction: column;
+  width: 93%;
+  height: 230px;
+  border-radius: 30px;
+  padding: 20px;
+  border: 1px solid black;
+  row-gap: 12px;
 }
 
 .label {
-    font-size: 19px;
-    font-family: 'Montserrat';
+  font-size: 19px;
+  font-family: 'Montserrat';
 }
 
 .input {
-    height: 25px;
+  height: 25px;
 }
 
 .btn {
-    height: 50px;
-    background: black;
-    color: white;
-    font-family: 'Montserrat';
-    font-size: 20px;
-    border-radius: 30px;
-    transition: ease color, background .8s ;
+  height: 50px;
+  background: black;
+  color: white;
+  font-family: 'Montserrat';
+  font-size: 20px;
+  border-radius: 30px;
+  transition:
+    ease color,
+    background 0.8s;
 }
 
 .btn:hover {
-    background: white;
-    color: black;
+  background: white;
+  color: black;
+}
+
+.BtnUl {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  padding: 0;
 }
 
 .loginBtn {
-    width: 300px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    column-gap: 3px;
-    font-size: 20px;
-    font-family: 'Montserrat';
-    animation: opacity .7s ease alternate;
-    border-radius: 10px;
+  width: 130%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 3px;
+  font-size: 20px;
+  font-family: 'Montserrat';
+  animation: opacity 1s ease alternate;
+  border-radius: 10px;
 }
 
 .li {
-    animation: opacity 1s ease alternate;
+  animation: opacity 1.5s ease alternate;
 }
 
 .loginBtnImg {
-    width: 34px;
-    height: 34px;
+  width: 34px;
+  height: 34px;
+}
+
+.navItem.openNav {
+  font-size: 24px;
+}
+
+.loginNav {
+  display: flex;
+  column-gap: 20px;
+  align-items: center;
+}
+
+.burgerBtn {
+  background: transparent;
+  border: none;
+  position: relative;
+  z-index: 1001;
+}
+
+.mobileBurger {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  max-width: 100vw;
+  height: 100vh;
+
+  background: white;
+
+  display: flex;
+  flex-direction: column;
+  padding: 25px;
+
+  transform: translateX(-100%);
+  opacity: 0;
+
+  transition:
+    transform 0.4s ease,
+    opacity 0.4s ease;
+
+  z-index: 1000;
+}
+
+.mobileBurger.open {
+  transform: translateX(0);
+  opacity: 1;
+}
+
+.btnBurgerClose {
+  border: none;
+  background: transparent;
+  padding-left: 15px;
+  width: 70px;
+}
+
+.mobileBurgerList {
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+}
+
+.navItem {
+  color: black;
+  text-decoration: none;
+  font-family: 'Montserrat';
+}
+.loginNav.openNav {
+  flex-direction: column;
+  align-items: flex-start;
+  row-gap: 20px;
+}
+
+.navItem.openNav {
+  font-size: 24px;
 }
 
 @keyframes opacity {
-    0% {
-        opacity: 0;
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+
+@media (min-width:768px) {
+    .mobileBurger {
+        display: none;
     }
-    50% {
-        opacity: 0.5;
+    .burgerBtn {
+        display: none;
     }
-    100% {
-        opacity: 1;
+    .form {
+        width: 500px;
+    }
+    .BtnUl {
+        flex-direction: row;
+        column-gap: 80px;
+    }
+    .loginBtn {
+        width: 100%;
+    }
+    .Login {
+        align-items: center;
+    }
+}
+
+@media (min-width: 1023px) {
+    .form {
+        width: 600px;
+    }
+    .BtnUl {
+        column-gap: 164px;
     }
 }
