--- a/frontend/src/styles/Profile.module.css
+++ b/frontend/src/styles/Profile.module.css
@@ -16,6 +16,77 @@
     animation: translate .9s ease  alternate;
 }
 
+.navItem {
+  color: black;
+  text-decoration: none;
+  font-family: 'Montserrat';
+}
+
+.navItem.openNav {
+  font-size: 24px;
+}
+
+.loginNav {
+  display: flex;
+  column-gap: 20px;
+  align-items: center;
+}
+
+.loginNav.openNav {
+  flex-direction: column;
+  align-items: flex-start;
+  row-gap: 20px;
+}
+
+.burgerBtn {
+  background: transparent;
+  border: none;
+  position: relative;
+  z-index: 1001;
+}
+
+.mobileBurger {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  max-width: 100vw;
+  height: 100vh;
+
+  background: white;
+
+  display: flex;
+  flex-direction: column;
+  padding: 25px;
+
+  transform: translateX(-100%);
+  opacity: 0;
+
+  transition:
+    transform 0.4s ease,
+    opacity 0.4s ease;
+
+  z-index: 1000;
+}
+
+.mobileBurger.open {
+  transform: translateX(0);
+  opacity: 1;
+}
+
+.btnBurgerClose {
+  border: none;
+  background: transparent;
+  padding-left: 15px;
+  width: 70px;
+}
+
+.mobileBurgerList {
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+}
 
 @keyframes translate {
     0% {
@@ -26,5 +97,14 @@
     }
     100% {
         transform: translate(0px);
+    }
+}
+
+@media (min-width:768px) {
+    .mobileBurger {
+        display: none;
+    }
+    .burgerBtn {
+        display: none;
     }
 }
