--- a/frontend/src/styles/Signup.module.css
+++ b/frontend/src/styles/Signup.module.css
@@ -1,24 +1,27 @@
 .title {
     font-family: 'Montserrat';
+    text-align: center;
 }
 
 .SignUp {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     padding: 10px;
+    align-items: flex-start;
 }
 
 .form {
     display: flex;
     flex-direction: column;
-    width: 500px;
+    margin: 0 auto;
+    width: 91%;
+    min-width: 200px;
     height: 280px;
     border-radius: 30px;
     padding: 20px;
     border: 1px solid black;
     row-gap: 12px;
+    margin: 0;
 }
 
 .label {
@@ -43,4 +46,93 @@
 .btn:hover {
     background: white;
     color: black;
+}
+
+.navItem.openNav {
+  font-size: 24px;
+}
+
+.loginNav {
+  display: flex;
+  column-gap: 20px;
+  align-items: center;
+}
+
+.burgerBtn {
+  background: transparent;
+  border: none;
+  position: relative;
+  z-index: 1001;
+}
+
+.mobileBurger {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  max-width: 100vw;
+  height: 100vh;
+
+  background: white;
+
+  display: flex;
+  flex-direction: column;
+  padding: 25px;
+
+  transform: translateX(-100%);
+  opacity: 0;
+
+  transition:
+    transform 0.4s ease,
+    opacity 0.4s ease;
+
+  z-index: 1000;
+}
+
+.loginNav.openNav {
+  flex-direction: column;
+  align-items: flex-start;
+  row-gap: 20px;
+}
+
+.mobileBurger.open {
+  transform: translateX(0);
+  opacity: 1;
+}
+
+.btnBurgerClose {
+  border: none;
+  background: transparent;
+  padding-left: 15px;
+  width: 70px;
+}
+
+.mobileBurgerList {
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
+}
+
+.navItem {
+  color: black;
+  text-decoration: none;
+  font-family: 'Montserrat';
+}
+
+.navItem.openNav {
+  font-size: 24px;
+}
+
+@media (min-width: 768px) {
+    .mobileBurger {
+        display: none;
+    }
+    .burgerBtn {
+        display: none;
+    }
+
+    .SignUp {
+        align-items: center;
+    }
 }
